--- a/index.html
+++ b/index.html
@@ -115,6 +115,77 @@
 					<p>부제목과 설명</p>
 				</div>
 			</article>
+
+			<article class="even">
+				<div>
+					<img src="img/p12.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p13.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p14.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p15.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p16.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p17.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p18.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p19.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p20.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p11.jpg" alt="">
+					<h2>제목</h2>
+					<p>부제목과 설명</p>
+				</div>
+			</article>
 			
 
 		</section>
